# -Agents

./: .env.example  .gitignore  GRADUATE_AGENT_README.md  GRADUATE_AGENT_SUMMARY.md  GRADUATE_ASSISTANT_COMPLETE.md  ICLOUD_VOICE_WATCHER_GUIDE.md  PHASE_3_COMPLETE.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_ICLOUD_COMPLETE.md  QUICKSTART.md  README.md  STAGE_4.1_COMPLETE.md  STAGE_4.2_COMPLETE.md  TASK_1.1_COMPLETE.md  TASK_1.2_COMPLETE.md  TASK_1.3_COMPLETE.md  TASK_2.1_COMPLETE.md  TASK_2.2_COMPLETE.md  TASK_2.3_COMPLETE.md  TASK_3.2_COMPLETE.md  TASK_3.3_COMPLETE.md  TASK_3.4_COMPLETE.md  TASK_3.5_COMPLETE.md  WEBAPP_DEMO.md  WEBAPP_GUIDE.md  WEBAPP_ROADMAP.md  pyproject.toml  requirements.txt  run_webapp.bat  run_webapp.sh  setup_graduate_agent.sh  test_graduate_agent.py  預計開發.md
agents/: auto_organizer.py  cli.py  expense_watcher.py  voice_butler.py
graduate-assistant/: .env.example  .env.nccu.example  .gitignore  APP_LAUNCHER_GUIDE.md  GraduateAssistant.vbs  NCCU_EMAIL_SETUP.md  NCCU_MAIL2000_SETUP.md  NCCU_QUICK_START.md  README.md  StopGraduateAssistant.vbs  TEST_RESULTS_SUMMARY.md  create-macos-app.sh  ecosystem.config.js  package-lock.json  package.json  start-mail-watcher.bat  start-mail-watcher.sh  test-system.sh
graduate-assistant/prisma/: schema.prisma
graduate-assistant/scripts/: app-launcher.ts  init-nccu-email.ts  process-mail2000.ts  process-nccu-emails.ts  start-mail2000-watcher.ts
graduate-assistant/src/: env.ts  middleware.ts
graduate_agent/: main.py
tests/: test_auto_organizer.py  test_expense_watcher.py  test_voice_butler.py
(+36 files in other folders)
